manifests/workloads/home-assistant/home-assistant-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: home-assistant
  namespace: home-assistant
  labels:
    app.kubernetes.io/name: home-assistant
spec:
  parentRefs:
    - name: envoy-gateway
      namespace: envoy-gateway
      sectionName: https
  hostnames:
    - home.chik4ge.me
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: home-assistant
          port: 8080
